
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ g_physmap ;
 int read_range (scalar_t__,size_t,char*) ;

__attribute__((used)) static void phys_read_range(unsigned long offset, size_t length, char *buffer) {
 read_range(g_physmap + offset, length, buffer);
}
